worked on text sizing in reasons section

--- a/src/style.css
+++ b/src/style.css
@@ -526,7 +526,7 @@ sean #45b29a
 
 .reasons-card {
     width: 20rem;
-    height: 26.5rem;
+    min-height: 26.5rem;
     border-radius: 18px;
     background: #fff;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
@@ -577,7 +577,7 @@ sean #45b29a
 .reasons-card-text {
     margin: 0.5rem;
     font-family: 'Raleway';
-    font-size: 0.95rem;
+    
     height: 40%;
 }
 
@@ -587,8 +587,8 @@ sean #45b29a
 
 .reasons-card-text>p {
     padding: 2rem;
-    font-size: 1rem;
-    letter-spacing: 2px;
+    /* font-size: 1rem;
+    letter-spacing: 2px; */
 }
 
 .reasons-footer {
