--- a/src/style.css
+++ b/src/style.css
@@ -16,8 +16,6 @@
     --act-clr: #ff9057;
     --bg-pry: #fff;
     --bg-sec: #e0ebe8;
-    --font-heading: 'Roboto', sans-serif;
-    --font-body:'Open Sans', sans-serif;
 }
 
 html,body {
@@ -25,10 +23,6 @@ html,body {
     font-size: 16.7px;
     line-height: 1.5;
 }
-/* body h1,h2,h3,h4,h5,h6 {
-    font-family: 'Lato', sans-serif;
-}
-body p,a */
 
 @supports (-moz-appearance: none) {
     html,body {
@@ -51,6 +45,12 @@ h2,
 h3,
 h4 {
     text-align: center;
+    font-family: 'Roboto', sans-serif;
+    
+}
+
+p,a,li {
+font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -70,7 +70,7 @@ sean #45b29a
 .nav {
     display: flex;
     padding: 0.3rem;
-    font-family: Lato, sans-serif;
+    
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0.2) 100%);
     position: fixed;
     width: 100vw;
@@ -103,11 +103,11 @@ sean #45b29a
 }
 
 .nav-items {
-    font-family: Lato, sans-serif;
+  
     text-decoration: none;
     padding: 0 0.6rem;
     border-radius: 18px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-style: oblique;
     font-weight: 600;
     /* align-self: center; */
@@ -214,7 +214,6 @@ sean #45b29a
 /* Hero section */
 
 .hero {
-    /* background: url("./img/hero/a-water-falls-in-a-mountain-forest-2892007.jpg"); */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -224,9 +223,9 @@ sean #45b29a
     width: 100vw;
     text-align: center;
     color: var(--text-sec);
-    font-family: 'Lato', sans-serif;
     font-style: italic;
-    padding-top: 4rem;
+    background: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
+    /* background-color: var(--hl-clr); */
 }
 
 .time {
@@ -236,24 +235,26 @@ sean #45b29a
 
 .greeting {
     font-style: normal;
-    font-weight: 600;
-    letter-spacing: 4px;
-    line-height: 58px;
-    
-    font-style: italic;
+    font-weight: 500;
 }
 
 #description {
-    padding: 90px;
+    padding:6rem 0.5rem 0 0.5rem;
     font-style: normal;
-    font-weight: 600;
-    letter-spacing: 2px;
-    line-height: 24px;
-    font-family: 'Lato', sans-serif;
+    font-weight: 400;
     font-style: italic;
 }
 
-
+@media screen and (max-width:400px) {
+.hero .time{
+   font-size: 3rem;
+}
+#description {
+    padding:3rem 0.2rem 0 0.2rem;
+  
+   
+}
+}
 /* Blinking cursor */
 
 .txt-type>.txt {
@@ -414,7 +415,7 @@ cards-main-two {
     text-align: center;
     letter-spacing: normal;
     /* For mobile */
-    background: none;
+    background: inherit;
 }
 
 .cards-info>h1 {
@@ -534,6 +535,33 @@ cards-main-two {
       }
 }
 
+@media screen and (max-width:400px) {
+
+
+    .cards-main-one .card-pic-one {
+        height: 15rem;
+        width: 15rem;
+         
+      }
+  
+      .cards-main-two .card-pic-three {
+          height: 15rem;
+          width: 15rem;
+      }
+      .cards-main-three .card-pic-five {
+          height:15rem;
+          width:15rem;
+      }
+  
+      .cards-main-four .card-pic-seven {
+          height: 15rem;
+          width: 15rem;
+      }
+      .cards-main-five .card-pic-nine {
+          height: 15rem;
+          width: 15rem;
+      }
+}
 /* Achievements */
 
 
@@ -806,18 +834,12 @@ cards-main-two {
 }
 
 .reasons-card-text {
-    margin: 0.5rem;
     height: 40%;
 }
 
-.reasons-card-text>h2 {
-    font-family: Lato sans-serif;
-}
 
 .reasons-card-text>p {
-    padding: 1rem;
-    /* font-size: 1rem;
-    letter-spacing: 2px; */
+    padding: 0.6rem;
 }
 
 .reasons-footer {
@@ -834,6 +856,24 @@ cards-main-two {
     background: #FF8344;
 }
  
+@media screen and (max-width:400px) {
+   
+    .reasons-card-text>p {
+        padding: 0.2rem;
+    }
+    .reasons-card-img {
+        height: 50%;
+        padding: 0 1rem;
+    }
+    .reasons-card-text {
+        height: 43%;
+    }
+    .reasons-footer {
+        height: 7%;
+        border-bottom-left-radius: 18px;
+        border-bottom-right-radius: 18px;
+    }
+}
 
 /* Contact Section */
 
@@ -863,7 +903,8 @@ cards-main-two {
 }
 
 .hiring>h3 {
-    font-weight: 400
+    font-weight: 500;
+    padding: 0 0.5rem;
 }
 
 .hiring-btn {
@@ -871,8 +912,8 @@ cards-main-two {
     margin: 2rem;
     background: var(--hl-clr);
     color: var(--text-sec);
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 1.3rem;
+    font-weight: 500;
     border: 1px solid var(--hl-clr);
     border-radius: 18px;
     animation: beat .35s infinite alternate;
@@ -892,8 +933,8 @@ cards-main-two {
 
 .message>h3 {
     margin-top: 1rem;
-    font-weight: 200;
-    padding: 1rem;
+    font-weight: 500;
+    padding: 0 0.5rem;
 }
 
 .message-list {
@@ -902,13 +943,6 @@ cards-main-two {
     justify-content: space-evenly;
  
 }
-@media screen and (max-width:700px) {
-    .message-list {
-        flex-direction: column;
-       align-items: center;
-    }
-}
-
 .message-list>li {
     margin: 2rem;
 }
@@ -939,6 +973,13 @@ cards-main-two {
     vertical-align: middle;
 }
 
+@media screen and (max-width:700px) {
+    .message-list {
+        flex-direction: column;
+       align-items: center;
+    }
+}
+
 .message-btn {
     transition: 0.5s ease;
 }
@@ -952,6 +993,15 @@ cards-main-two {
     width: 3rem;
     vertical-align: middle;
 }
+
+ 
+@media screen and (max-width: 400px) {
+    .flash-icon {
+         height: 2rem;
+         width: 2rem;
+ 
+     } 
+ }
 
 .down-icon {
     height: 2rem;
