--- a/src/style.css
+++ b/src/style.css
@@ -224,7 +224,7 @@ sean #45b29a
     text-align: center;
     color: var(--text-sec);
     font-style: italic;
-    background: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
+    background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
     /* background-color: var(--hl-clr); */
 }
 
@@ -573,6 +573,7 @@ cards-main-two {
     margin: 2rem auto;
     max-width: 100vw;
     /* background: linear-gradient(90deg, #19529C 50%, #ee9a14 50%); */
+    background: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
     background: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover;
 }
 
