--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,6 @@ sean #45b29a
 .nav {
     display: flex;
     padding: 0.3rem;
-    
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0.2) 100%);
     position: fixed;
     width: 100vw;
@@ -224,7 +223,7 @@ sean #45b29a
     text-align: center;
     color: var(--text-sec);
     font-style: italic;
-    background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
+    background-color:  #00cdac;
     /* background-color: var(--hl-clr); */
 }
 
