--- a/src/style.css
+++ b/src/style.css
@@ -223,7 +223,7 @@ sean #45b29a
     text-align: center;
     color: var(--text-sec);
     font-style: italic;
-    background-color:  #00cdac;
+    background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
     /* background-color: var(--hl-clr); */
 }
 
