--- a/src/style.css
+++ b/src/style.css
@@ -223,8 +223,8 @@ sean #45b29a
     text-align: center;
     color: var(--text-sec);
     font-style: italic;
-    background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
-    /* background-color: var(--hl-clr); */
+    /* background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%); */
+    background-color: #00cdac;
 }
 
 .time {
