--- a/src/style.css
+++ b/src/style.css
@@ -213,7 +213,7 @@ sean #45b29a
 /* Hero section */
 
 .hero {
-    background-color: #00cdac ;
+   background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -224,7 +224,7 @@ sean #45b29a
     text-align: center;
     color: var(--text-sec);
     font-style: italic;
-    /* background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%); */
+    
     
 }
 
@@ -572,8 +572,8 @@ cards-main-two {
     margin: 2rem auto;
     max-width: 100vw;
     /* background: linear-gradient(90deg, #19529C 50%, #ee9a14 50%); */
-    background: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
-    background: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover;
+    background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
+    /* background: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover; */
 }
 
 
