--- a/src/style.css
+++ b/src/style.css
@@ -573,7 +573,7 @@ cards-main-two {
     max-width: 100vw;
     /* background: linear-gradient(90deg, #19529C 50%, #ee9a14 50%); */
     background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
-    /* background: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover; */
+    background: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover;
 }
 
 
