--- a/src/style.css
+++ b/src/style.css
@@ -213,7 +213,8 @@ sean #45b29a
 /* Hero section */
 
 .hero {
-   background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
+   /* background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%); */
+   background-color:  #00cdac;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -571,9 +572,10 @@ cards-main-two {
     position: relative;
     margin: 2rem auto;
     max-width: 100vw;
+    background-color:  #00cdac;
     /* background: linear-gradient(90deg, #19529C 50%, #ee9a14 50%); */
-    background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%);
-    background: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover;
+    /* background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%); */
+    background-image: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover;
 }
 
 
