--- a/src/style.css
+++ b/src/style.css
@@ -211,10 +211,13 @@ sean #45b29a
 }
 
 /* Hero section */
+/* .hero-container {
+    background-color:  #00cdac;
+} */
 
 .hero {
    /* background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%); */
-   background-color:  #00cdac;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -224,9 +227,8 @@ sean #45b29a
     width: 100vw;
     text-align: center;
     color: var(--text-sec);
-    font-style: italic;
-    
-    
+    font-style: italic; 
+    /* background: url('../src/img/hero/america-arid-bushes-california-221148.jpg'); */
 }
 
 .time {
@@ -567,17 +569,38 @@ cards-main-two {
 
 /* The timeline container */
 
-.timeline {
+
+
+ .timeline {
+    
     padding: 2rem 3rem;
     position: relative;
     margin: 2rem auto;
     max-width: 100vw;
-    background-color:  #00cdac;
-    /* background: linear-gradient(90deg, #19529C 50%, #ee9a14 50%); */
-    /* background-image: linear-gradient(90deg, #02aab0 0%, #00cdac  80%); */
-    background-image: url('./img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg') no-repeat center center / cover;
+    /* background-color: #00cdac; */
+     background: url("../src/img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg") no-repeat center center / cover;
+   
+} 
+
+
+.timeline-container {
+    background-color: #00cdac;
 }
 
+/* 
+.timeline {
+    
+    padding: 2rem 3rem;
+    position: relative;
+    margin: 2rem auto;
+    max-width: 100vw;
+   
+     background-image: url("../src/img/achievements/scenic-view-of-mountains-during-dawn-1266810.jpg") ;
+     background-repeat: no-repeat;
+     background-position:  center center ;
+     background-size:  cover;
+   
+} */
 
 /* the vertical ruler */
 
