--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body {
 	overflow-x: hidden;
 	font-size: 16.7px;
 	line-height: 1.5;
+	overflow-y: auto;
 }
 
 @supports (-moz-appearance: none) {
@@ -65,6 +66,7 @@ li {
 	color: #fff;
 	background: linear-gradient(90deg, #000428 0%, #004e92 60%);
 	font-style: italic;
+	/* transition: all 0.3s ease; */
 }
 .lds-heart {
 	/* display: inline-block; */
@@ -120,9 +122,20 @@ li {
 		transform: scale(0.9);
 	}
 }
+/* #02aab0: */
+/* Progress Bar */
+#progress {
+	--scroll: 0%;
+	background: linear-gradient(90deg, #07edf5 var(--scroll), transparent 0%);
+	/* var(--scroll), transparent 0) */
+	position: fixed;
+	width: 100%;
+	height: 7px;
+	top: 0px;
+	z-index: 1000;
+}
 
 /* Nav bar */
-
 .nav {
 	display: flex;
 	padding: 0.3rem;
